--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -4,16 +4,17 @@
   <span>Something went wrong:</span>
   <ul>
     <% @errors.each do |error| %>
-      <li><%= error %></li>
+      <li class="errors"><%= error %></li>
     <% end %>
   </ul>
 <% end %>
 
 <form method="post" action="/questions">
-  <label>Title:</label>
+  <label>Title:</label><br>
   <input id="title_input" name="title" type="text" tabindex="1">
-  <label>Description:</label>
+  <br><br>
+  <label>Description:</label><br>
   <textarea id="description_textarea" name="description" tabindex="2"></textarea>
-
+  <br><br>
   <input type="submit" value="Post" tabindex="3">
 </form>
