Add methods for total votes, comments and answers to the questions

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -8,7 +8,7 @@
       <li>
         <a href="/questions/<%= question.id %>"><%= question.title %></a>
         <br>
-        <span class="question_details"><%= "Written on #{long_form_date(question.created_at)} by #{User.find(question.author_id).username}." %> | 3 votes | 5 answers | 23 comments </span>
+        <span class="question_details"><%= "Written on #{long_form_date(question.created_at)} by #{User.find(question.author_id).username}." %> | <%= question.total_votes %> votes | <%= question.total_answers %> answers | <%= question.total_comments %> comments </span>
         <p class="stub"><%= stub(question.description) %></p>
       </li>
       <br>
