--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>CRUD Overflow</title>
+  <% if current_user %>
+    <a href="/questions/new">Ask a question</a>
+  <% end %>
 </head>
 <body>
   <%= yield %>
