AJax question page

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -35,50 +35,14 @@
   <div id="answers">
     <% @answers.each do |answer| %>
 
-      <article id="<%= answer.id %>">
+        <%= erb :'_answer', locals: {answer: answer} %>
 
-
-        <div class='vote-post'>
-          <!-- UPVOTE DOWNVOTE -->
-          <!-- <a href=""></a>  AJAX THESE FORMS-->
-          <form method="answer" action='/answers/<%= answer.id %>/vote' class="inline">
-            <button type="submit" name="submit_param" value="submit_value" class="upvote-button"></button>
-          </form>
-
-          <!--vote count -->
-          <span class='vote-count-post'><%= answer.points %></span>
-
-          <!-- DOWNVOTE -->
-          <form method="answer" action='/answers/<%= answer.id %>/vote' class="inline">
-            <button type="submit" name="submit_param" value="submit_value" class="downvote-button"></button>
-          </form>
-        </div>
-
-
-        <p class='answer-description'><%= answer.description %></p>
-
-        <div id="answer-comments">
-          <%answer.comments.each do |comment| %>
-
-          <p id='comment-description'>
-            <%=comment.description%>
-          </p>
-
-          <p id='commenter-info'>
-            <span class='user_id'><%comment.user_id %></span>
-            <span class='timestamp'><%comment.created_at %></span>
-          </p>
-
-
-          <span>  <a href="/answers/:id/comments">New Comment</a></span>
-        </div>
-        <% end %>
-      </article>
     <% end %>
   </div>
 
+
       <h4>Have an answer?</h4>
-        <form action='/question/<%=@question.id%>/answers' method='post' class='new-answer'>
+        <form action='/questions/<%=@question.id%>/answers' method='post' class='new-answer'>
           <input type="text" name="description" placeholder="enter answer here:">
           <input type="submit" value="submit">
         </form>
