Add answer ajax

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -35,7 +35,7 @@
   <div id="answers">
     <% @answers.each do |answer| %>
 
-        <%= erb :'_answer', locals: {answer: answer} %>
+        <%= erb :'_answers', locals: {answer: answer} %>
 
     <% end %>
   </div>
