--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+  <script src="/js/sorting.js"></script>
 
   <title>CRUD Overflow</title>
   <% if current_user %>
