--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
   <title>CRUD Overflow</title>
 </head>
 <body>
-  <a href="/"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+  <a id=stackoverflow_icon href="/"><i class="fa fa-stack-overflow" aria-hidden="true" style="color:blue; font-size:300%"></i></a>
   <% if current_user %>
   <form class="logout_button" action="/logout" method="post">
     <input type="hidden" name="_method" value="delete">
