--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,6 +22,7 @@
 <body>
   <a id=stackoverflow_icon href="/"><i class="fa fa-stack-overflow" aria-hidden="true" style="color:blue; font-size:300%"></i></a>
   <% if current_user %>
+  <a href="/"><%="#{current_user.username}"%></a>
   <form class="logout_button" action="/logout" method="post">
     <input type="hidden" name="_method" value="delete">
     <input type="submit" value="Logout">
