--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,17 +20,22 @@
   <title>CRUD Overflow</title>
 </head>
 <body>
+
   <a id=stackoverflow_icon href="/"><i class="fa fa-stack-overflow" aria-hidden="true" style="color:blue; font-size:300%"></i></a>
-  <% if current_user %>
-  <a href="/"><%="#{current_user.username}"%></a>
-  <form class="logout_button" action="/logout" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <input type="submit" value="Logout">
-  </form>
-  <% else %>
-  <a href="/login">Login</a>
-  <a href="/register">Register</a>
-  <% end %>
+  <nav>
+    <% if current_user %>
+    <a href="/"><%="#{current_user.username}"%></a>
+    <a href="/logout">logout</a>
+    <!-- <form class="logout_button" action="/logout" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="Logout">
+    </form> -->
+    <% else %>
+    <a href="/login">login</a>
+    <a href="/register">register</a>
+    <% end %>
+  </nav>
+
   <% if current_user %>
   <a href="/questions/new">Ask a question</a>
   <% end %>
