--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -32,25 +32,32 @@
 
   <div id="question-comments" class="comments">
     <% @question.comments.each do |comment| %>
-      <p>
+      <%= erb :'_comments', locals: {comment: comment} %>
+      <!-- <p>
         <%=comment.description%>
       </p>
       <p>
         <span class="question_details"><%= "Written on #{long_form_date(comment.created_at)} by #{User.find(comment.user_id).username}." %></span>
         <hr>
-      </p>
-    <% end %>
-    <% if current_user %>
-    <span><a href="/questions/:id/comments">New Comment</a></span>
+      </p> -->
     <% end %>
   </div>
+  <% if current_user %>
+    <span><a href="" class="new_comment_link">New Comment</a></span>
+    <form class="new_comment_form" action='/questions/<%=@question.id%>/comments' method='post'>
+      <input type="text" name="comment" placeholder="Your comment here">
+      <input type="submit" value="Submit">
+    </form>
+  <% end %>
 
+
+  <br>
   <br>
   <h3><%= @answers.length %> Answers</h3>
   <hr>
   <div id="answers">
     <% @answers.each do |answer| %>
-        <%= erb :'_answers', locals: {answer: answer} %>
+      <%= erb :'_answers', locals: {answer: answer} %>
     <% end %>
   </div>
 
@@ -60,7 +67,7 @@
   <hr>
   <form action='/questions/<%=@question.id%>/answers' method='post' class='new-answer'>
     <input type="text" name="description" placeholder="Your answer here">
-    <input type="submit" value="submit">
+    <input type="submit" value="Submit">
   </form>
   <% end %>
 </div>
