Refactor questions controller and modify best answer display

--- a/app/views/_answers.erb
+++ b/app/views/_answers.erb
@@ -65,7 +65,7 @@
       <form method="post" action="/questions/<%= @question.id%>/answers/<%= answer.id%>">
       <input type="hidden" name="_method" value="patch">
       <input type="submit" value="Mark as best answer" tabindex="3">
-      </form> %>
+      </form>
       <% end %>
 <!--   </div> -->
   <br>
