--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -75,7 +75,7 @@
   <hr>
   <div id="answers">
   <% if @bestanswer %>
-  <p> Best Answer </p>
+  <p> ✅ Best Answer </p>
   <%= erb :'_answers', locals: {answer: @bestanswer} %>
   <% end %>
   <hr>
