--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,11 +21,10 @@
   <title>CRUD Overflow</title>
 </head>
 <body>
-
   <a id=stackoverflow_icon href="/"><i class="fa fa-stack-overflow" aria-hidden="true" style="color:blue; font-size:300%"></i></a>
   <nav>
     <% if current_user %>
-    <a href="user/user.id"><%="#{current_user.username}"%></a> | <a href="/logout">Logout</a>
+    <a href="/users/<%=current_user.id%>"><%="#{current_user.username}"%></a> | <a href="/logout">Logout</a>
     <!-- <form class="logout_button" action="/logout" method="post">
       <input type="hidden" name="_method" value="delete">
       <input type="submit" value="Logout">
